client-v2/src/components/action-panel/ActionPanel.styles.scss
@use "../../variables.style" as *;

.ActionsPanel {
  flex: 0 0 auto;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 15px;
  padding: 0 10px;
  min-width: 0;
  & > * {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
  }
}

.IconButton {
  background-color: $iconBtn-bg-color;
  color: white;
  width: 48px;
  height: 48px;
  border-radius: 12px;
  cursor: pointer;
  &:hover {
    background-color: $iconBtn-bg-color-hover;
  }

  &.color-red {
    color: rgb(237, 52, 52);
  }

  &:disabled {
    background-color: #414040;
    cursor: auto;
  }

  &.size-auto {
    min-width: 48px;
    width: auto;
    padding: 0 5px;
  }
}

.CamOnAndReverse {
  position: relative;
}

.CamReverse {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  bottom: calc(100% + 5px);
}

@media (max-width: 585px) {
  .mobile-hidden {
    display: none;
  }

  .ActionsPanel {
    gap: 0px;
  }
}

